--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -43,8 +43,8 @@
         </menu>
     </item>
 
-    <item android:id="@+id/about"
-          android:title="关于"
+    <item android:id="@+id/refresh"
+          android:title="同步"
           android:showAsAction="never|withText"/>
 
     <item android:id="@+id/exit"
