--- a/app/src/main/res/layout/input_sale_dialog.xml
+++ b/app/src/main/res/layout/input_sale_dialog.xml
@@ -2,61 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:gravity="center"
-              android:paddingLeft="10dp"
-              android:paddingRight="10dp"
-              android:layout_width="match_parent"
+              android:padding="0dp"
+              android:layout_width="fill_parent"
               android:layout_height="match_parent">
 
-    <LinearLayout
-            android:orientation="horizontal"
-            android:paddingTop="5dp"
+    <TextView
+            android:id="@+id/input_sale_dialog_title"
+            android:textSize="16dp"
+            android:text="合计: 0 件，0 元"
+            android:textAlignment="center"
+            android:paddingTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <TextView
-                android:text="行号"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
-
-        <TextView
-                android:text="条码"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
-
-        <TextView
-                android:text="数量"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
-
-        <TextView
-                android:text="折扣"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
-
-        <TextView
-                android:text="金额"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_weight="1.5"
-                android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-    <ListView
-            android:id="@+id/input_sale_dialog_listView"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"/>
+            android:layout_height="wrap_content"/>
 
     <LinearLayout
             android:orientation="horizontal"
-            android:paddingTop="10dp"
-            android:layout_width="match_parent"
+            android:paddingTop="8dp"
+            android:layout_width="@dimen/input_sale_dialog_button_width"
             android:layout_height="wrap_content">
 
         <TextView
@@ -66,15 +28,15 @@
 
         <EditText
                 android:id="@+id/input_sale_dialog_tm"
-                android:hint="请输入商品条码"
+                android:hint="请输入价格"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <LinearLayout
             android:orientation="horizontal"
-            android:paddingTop="10dp"
-            android:layout_width="match_parent"
+            android:paddingTop="8dp"
+            android:layout_width="@dimen/input_sale_dialog_button_width"
             android:layout_height="wrap_content">
 
         <TextView
@@ -84,40 +46,98 @@
 
         <EditText
                 android:id="@+id/input_sale_dialog_sl"
-                android:hint="1"
+                android:hint="请输入数量"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
+
     <LinearLayout
             android:orientation="horizontal"
             android:gravity="center"
-            android:paddingTop="10dp"
+            android:paddingTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-    <Button
-            android:id="@+id/input_sale_dialog_sy"
-            android:text="输入"
-            android:layout_width="290dp"
-            android:layout_height="wrap_content"/>
+
+        <Button
+                android:id="@+id/input_sale_dialog_sy"
+                android:text="输入"
+                android:layout_width="@dimen/input_sale_dialog_button_width"
+                android:layout_height="wrap_content"/>
     </LinearLayout>
+
     <LinearLayout
             android:orientation="horizontal"
-            android:paddingTop="10dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
         <Button
                 android:id="@+id/input_sale_dialog_buttonOK"
                 android:text="确定"
                 android:layout_width="120dp"
                 android:layout_marginRight="50dp"
                 android:layout_height="wrap_content"/>
+
         <Button
                 android:id="@+id/input_sale_dialog_buttonCancel"
                 android:text="放弃"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"/>
-        </LinearLayout>
+    </LinearLayout>
 
+    <View style="@style/horLine"/>
 
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <View style="@style/verLine_header"/>
+
+        <TextView
+                android:text="行号"
+                style="@style/listHeaderStyle"
+                android:layout_weight="1"/>
+
+        <View style="@style/verLine_header"/>
+
+        <TextView
+                android:text="条码"
+                style="@style/listHeaderStyle"
+                android:layout_weight="1"/>
+
+        <View style="@style/verLine_header"/>
+
+        <TextView
+                android:text="数量"
+                style="@style/listHeaderStyle"
+                android:layout_weight="1"/>
+
+        <View style="@style/verLine_header"/>
+
+        <TextView
+                android:text="折扣"
+                style="@style/listHeaderStyle"
+                android:layout_weight="1"/>
+
+        <View style="@style/verLine_header"/>
+
+        <TextView
+                android:text="金额"
+                style="@style/listHeaderStyle"
+                android:layout_weight="1.5"/>
+
+        <View style="@style/verLine_header"/>
+    </LinearLayout>
+
+    <ListView
+            android:id="@+id/input_sale_dialog_listView"
+            android:dividerHeight="0.5dp"
+            android:divider="@color/colorLine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    <View style="@style/horLine"/>
 </LinearLayout>
