--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,9 +11,20 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+    <style name="input_sale_dialog_style" parent="@android:style/Theme.Holo.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>
+    </style>
     <style name="myActionBarStyle" parent="@android:style/Widget.Holo.ActionBar">
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:logo">@drawable/icon</item>
+    </style>
+    <style name="horLine">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">@color/colorLine</item>
     </style>
     <style name="verLine_header">
         <item name="android:layout_width">0.5dp</item>
