--- a/app/src/main/res/layout/input_sale_dialog.xml
+++ b/app/src/main/res/layout/input_sale_dialog.xml
@@ -29,6 +29,10 @@
         <EditText
                 android:id="@+id/input_sale_dialog_tm"
                 android:hint="请输入价格"
+                android:selectAllOnFocus="true"
+                android:singleLine="true"
+                android:inputType="number"
+                android:digits="1234567890."
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
@@ -47,6 +51,11 @@
         <EditText
                 android:id="@+id/input_sale_dialog_sl"
                 android:hint="请输入数量"
+                android:text="1"
+                android:singleLine="true"
+                android:digits="1234567890."
+                android:inputType="number"
+                android:selectAllOnFocus="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
