--- a/app/src/main/res/layout/input_ck_and_rk.xml
+++ b/app/src/main/res/layout/input_ck_and_rk.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:padding="0dp"
+              android:layout_marginLeft="20dp"
+              android:layout_marginRight="20dp"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
     <LinearLayout android:orientation="horizontal"
-                  android:layout_marginLeft="20dp"
-                  android:layout_marginRight="20dp"
+                  android:paddingTop="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
 
@@ -23,8 +24,7 @@
     </LinearLayout>
 
     <LinearLayout android:orientation="horizontal"
-                  android:layout_marginLeft="20dp"
-                  android:layout_marginRight="20dp"
+                  android:paddingTop="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
 
@@ -41,6 +41,8 @@
 
     <LinearLayout android:orientation="horizontal"
                   android:gravity="center"
+                  android:paddingTop="10dp"
+                  android:paddingBottom="20dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
         <Button android:id="@+id/input_ck_and_rk_buttonOK"
