--- a/app/src/main/res/layout/input_new_goods.xml
+++ b/app/src/main/res/layout/input_new_goods.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:padding="0dp"
+              android:layout_marginLeft="20dp"
+              android:layout_marginRight="20dp"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
+
     <LinearLayout android:orientation="horizontal"
-                  android:paddingLeft="20dp"
-                  android:paddingRight="20dp"
+                  android:paddingTop="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
         <TextView android:text="条码: "
@@ -14,12 +16,16 @@
                   android:layout_height="wrap_content"/>
 
         <EditText android:id="@+id/goods_new_tm"
+                  android:hint="请输入商品价格"
+                  android:selectAllOnFocus="true"
+                  android:inputType="number"
+                  android:digits="1234567890."
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout android:orientation="horizontal"
-                  android:paddingLeft="20dp"
-                  android:paddingRight="20dp"
+                  android:paddingTop="10dp"
+                  android:paddingBottom="20dp"
                   android:gravity="center"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
