--- a/app/src/main/res/layout/input_sale_dialog.xml
+++ b/app/src/main/res/layout/input_sale_dialog.xml
@@ -3,15 +3,16 @@
               android:orientation="vertical"
               android:gravity="center"
               android:padding="0dp"
-              android:layout_width="fill_parent"
-              android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
 
     <TextView
             android:id="@+id/input_sale_dialog_title"
-            android:textSize="16dp"
+            android:textSize="14dp"
             android:text="合计: 0 件，0 元"
             android:textAlignment="center"
-            android:paddingTop="8dp"
+            android:textColor="@color/colorAccent"
+            android:paddingTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -70,6 +71,7 @@
         <Button
                 android:id="@+id/input_sale_dialog_sy"
                 android:text="输入"
+                android:textSize="14dp"
                 android:layout_width="@dimen/input_sale_dialog_button_width"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
@@ -84,6 +86,7 @@
         <Button
                 android:id="@+id/input_sale_dialog_buttonOK"
                 android:text="确定"
+                android:textSize="14dp"
                 android:layout_width="120dp"
                 android:layout_marginRight="50dp"
                 android:layout_height="wrap_content"/>
@@ -91,6 +94,7 @@
         <Button
                 android:id="@+id/input_sale_dialog_buttonCancel"
                 android:text="放弃"
+                android:textSize="14dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
@@ -139,7 +143,7 @@
 
         <View style="@style/verLine_header"/>
     </LinearLayout>
-
+    <View style="@style/horLine"/>
     <ListView
             android:id="@+id/input_sale_dialog_listView"
             android:dividerHeight="0.5dp"
