--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -15,13 +15,13 @@
         <TextView
                 android:text="行号"
                 style="@style/listHeaderStyle"
-                android:layout_weight="1"/>
+                android:layout_weight="0.8"/>
         <View style="@style/verLine_header"/>
 
         <TextView
                 android:text="日期"
                 style="@style/listHeaderStyle"
-                android:layout_weight="2"/>
+                android:layout_weight="1.7"/>
         <View style="@style/verLine_header"/>
 
         <TextView
@@ -39,13 +39,13 @@
         <TextView
                 android:text="金额"
                 style="@style/listHeaderStyle"
-                android:layout_weight="1"/>
+                android:layout_weight="1.7"/>
         <View style="@style/verLine_header"/>
 
     </LinearLayout>
     <View style="@style/horLine"/>
     <ListView
-            android:id="@+id/history_rk_ck_listView"
+            android:id="@+id/listView_history"
             android:dividerHeight="0.5dp"
             android:divider="@color/colorLine"
             android:layout_width="match_parent"
