--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -7,13 +7,13 @@
     <TextView
             android:id="@+id/history_rk_ck_item_id"
             style="@style/listItemStyle"
-            android:layout_weight="1"/>
+            android:layout_weight="0.8"/>
     <View style="@style/verLine_item"/>
 
     <TextView
             android:id="@+id/history_rk_ck_item_rq"
             style="@style/listItemStyle"
-            android:layout_weight="2"/>
+            android:layout_weight="1.7"/>
     <View style="@style/verLine_item"/>
 
     <TextView
@@ -26,6 +26,12 @@
             android:id="@+id/history_rk_ck_item_sl"
             style="@style/listItemStyle"
             android:layout_weight="1"/>
+    <View style="@style/verLine_item"/>
+
+    <TextView
+            android:id="@+id/history_rk_ck_item_je"
+            style="@style/listItemStyle"
+            android:layout_weight="1.7"/>
     <View style="@style/verLine_item"/>
 
 </LinearLayout>
