--- a/app/src/main/res/layout/input_ck_and_rk.xml
+++ b/app/src/main/res/layout/input_ck_and_rk.xml
@@ -19,6 +19,7 @@
                   android:singleLine="true"
                   android:digits="1234567890."
                   android:inputType="number"
+                  android:selectAllOnFocus="true"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
     </LinearLayout>
